@@ -1996,8 +1996,15 @@ OAppend(id obj, NSDictionary *loc, unsigned lev, unsigned step,
 	    {
 	      if ([keys[i] isKindOfClass: NSStringClass] == NO)
 	        {
-		  [NSException raise: NSInvalidArgumentException
-		    format: @"Bad key in property list: '%@'", keys[i]];
+	          if ([keys[i] isKindOfClass: NSNumberClass] == YES)
+		    {
+		      keys[i] = [keys[i] description];
+		    }
+		  else
+		    {
+		      [NSException raise: NSInvalidArgumentException
+		        format: @"Bad key in property list: '%@'", keys[i]];
+		    }
 		}
 	    }
 	}
